knowledgeCity0610/common/log/oldLog/runall_p13068.log
[INFO]2021-05-11 13:03:02,283: log files at C:\Users\comba\Desktop\知识城地牛\knowledgeCity\common\log
[INFO]2021-05-11 13:03:02,283: find module agvCtrl.main_agv
[INFO]2021-05-11 13:03:02,283: find module agvDevice.main_agvDevice
[INFO]2021-05-11 13:03:02,284: find module alarm.main_alarm
[INFO]2021-05-11 13:03:02,284: find module auth.main_auth
[INFO]2021-05-11 13:03:02,284: find module autoCtrl.main_akmCtrl
[INFO]2021-05-11 13:03:02,285: find module door.main_door
[INFO]2021-05-11 13:03:02,285: find module elevator.main_elevator
[INFO]2021-05-11 13:03:02,285: find module feed.main_feed
[INFO]2021-05-11 13:03:02,291: find module remoteio.main_remoteio
[INFO]2021-05-11 13:03:02,293: import agvCtrl.main_agv
[INFO]2021-05-11 13:03:02,542: create lock <lock name:doorMgr.lock,<unlocked _thread.RLock object owner=0 count=0 at 0x0000020881CE67B0>>
[INFO]2021-05-11 13:03:02,544: create lock <lock name:door.lock,<unlocked _thread.RLock object owner=0 count=0 at 0x0000020881CE6918>>
[INFO]2021-05-11 13:03:02,593: create lock <lock name:timer.lock_2235563223696,<unlocked _thread.RLock object owner=0 count=0 at 0x0000020881F2E440>>
[ERROR]2021-05-11 13:03:02,601: mqtt is disabled
[INFO]2021-05-11 13:03:02,602: mqtt: subscribe [alarm/raise/+]
[INFO]2021-05-11 13:03:02,604: mqtt: subscribe [alarm/clear/+]
[INFO]2021-05-11 13:03:05,624: Mongodb connect to 127.0.0.1 port 27017
[INFO]2021-05-11 13:03:05,678: create lock <lock name:elevatorApi.tcp_lock,<unlocked _thread.RLock object owner=0 count=0 at 0x00000208820F8B48>>
[INFO]2021-05-11 13:03:05,680: create lock <lock name:elevatorApi.g_lock,<unlocked _thread.RLock object owner=0 count=0 at 0x00000208820F8788>>
[INFO]2021-05-11 13:03:05,682: create lock <lock name:elevatorMgr.lock,<unlocked _thread.RLock object owner=0 count=0 at 0x00000208820F8300>>
[INFO]2021-05-11 13:03:05,689: create lock <lock name:agvserver,<unlocked _thread.RLock object owner=0 count=0 at 0x0000020882201760>>
[INFO]2021-05-11 13:03:05,838: create lock <lock name:mapMgr.lock,<unlocked _thread.RLock object owner=0 count=0 at 0x00000208804BC198>>
[CRITICAL]2021-05-11 13:03:05,882: import main_agv failed, path: agvCtrl cause a error: unindent does not match any outer indentation level (jackMgr.py, line 131)
pid=13068, ppid=17848, tid=17576
Traceback (most recent call last):
  File "run_all.py", line 39, in findModule
    __import__(m[1])
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\main_agv.py", line 11, in <module>
    import agvControl
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\agvControl.py", line 10, in <module>
    import agvList
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\agvList.py", line 24, in <module>
    import agvDevice.rotationApi as rotationApi
  File "..\agvDevice\rotationApi.py", line 8, in <module>
    import main_agvDevice
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvDevice\main_agvDevice.py", line 10, in <module>
    import jackMgr
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvDevice\jackMgr.py", line 131
    def jackDownOld(agvId ,timeout):
                                   ^
IndentationError: unindent does not match any outer indentation level

[CRITICAL]2021-05-11 13:03:05,885: import main_agv failed, path: agvCtrl ,cause unindent does not match any outer indentation level (jackMgr.py, line 131)
